apps/media/plex-service.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  ports:
    - name: http
      port: 80
      targetPort: 32400
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  namespace: media
  name: plex
  labels:
    kubernetes.io/service-name: plex
addressType: IPv4
ports:
  - name: "plex"
    appProtocol: http
    protocol: TCP
    port: 32400
endpoints:
  - addresses:
      - "${NFS_IP}"
